MFH: Fixed bug #46649 (Setting array element with that same array produces inconsistent results)